--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "@faker-js/faker": "^7.6.0",
     "@handlebars/allow-prototype-access": "^1.0.5",
     "bcrypt": "^5.1.0",
+    "bootstrap": "^5.2.2",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^4.6.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
+    "express-validator": "^6.14.2",
     "method-override": "^3.0.0",
     "mongoose": "^6.7.1",
     "mongoose-paginate-v2": "^1.7.1",
@@ -33,6 +35,7 @@
     "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
+    "sharp": "^0.31.2",
     "slugify": "^1.6.5",
     "uuid": "^9.0.0"
   },
